# community_adventofcode_2024

./: README.md  tempCodeRunnerFile.python
Hendriks_unumstöslich_richtige_cpp_oder_vielleicht_später_auch_java_lösung/day01/: day01.cpp
day 1/: 1.py
day 1/Loui/: 1.py
day 1/caspar/: CMakeLists.txt  day1.jl
day 1/caspar/src/: main.f90
day 1/fabian/task_1/src/: main.rs
day2/loui/: Day_2_1.py  Day_2_part_1_and_2_more_elegant.py  Day_2_part_1_less_elegant.py  code.jl  code.py
